# LCsPythonHelper

./: .gitignore  README.md  pyproject.toml  setup.py
src/diseloryaHelper/: __init__.py  ocrHelper.py  pdfHelper.py
